--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,7 @@ color: #fff;
 	border-radius:4px;
 	text-transform:uppercase;
 	font-family: 'Montserrat', sans-serif;
-	background:#f7f7f7;
+	background:white;
 	margin-bottom:5px;
 	transition:all 0.3s ease-in-out;
 	-moz-transition:all 0.3s ease-in-out;
@@ -388,7 +388,7 @@ color: #fff;
 .Portfolio-box{
 	text-align:center;
 	margin-bottom:30px;
-	height:350px;
+	height:410px;
 	width:350px;
 	overflow:hidden;
 	float:left;
@@ -401,9 +401,10 @@ color: #fff;
 	-webkit-transition:all 0.3s ease-in-out;
 }
 
-.Portfolio-box img:hover {
+/*.Portfolio-box img:hover {
 	opacity: 0.6;
-}
+  visibility: visible
+}*/
 
 .Portfolio-nav li a.current{
 	background:#7cc576;
