--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,18 +2,25 @@
    Media Queries
    ========================================================================== */
 
-
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+  .service-list{ margin-bottom:30px;}
+  #technologies-figure{ margin-left: 0;}
+  #technologies-figure .logos{ width:24%; height: 24%; padding: 2%; margin:0;}
+	.c-logo-part ul li{ margin:0 15px;}
+	.form{ margin:0 0 0 20px}
+	.main-nav{ display:block !important; }
+}
 @media only screen and (min-width: 992px) {
 	/****Ipad Landscape 1024 Container 970 ****/
-	
+
 	.service-list{ margin-bottom:30px;}
 	.c-logo-part ul li{ margin:0 15px;}
 	.form{ margin:0 0 0 20px}
 	.main-nav{ display:block !important; }
-	/*.portfolioContainer{ width:800px; margin:0px auto !important; } */ 
-	
-}	
-   
+	/*.portfolioContainer{ width:800px; margin:0px auto !important; } */
+
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	/****Ipad Portrait 768 Container 750 ****/
 	body{ font-size:13px;}
@@ -25,6 +32,9 @@
 	h6{ font-size:16px;}
 	h3{ font-size:15px;}
 	.service-list{ margin-bottom:20px; font-size:15px;}
+  #technologies-figure{ width: 40%}
+  #technologies-figure .logos{ width:24%; height: 24%; padding: 2%; margin: 7% 0;}
+  #technologies-figure{ margin-left: 0;}
 	.featured-work p.padding-b{ padding-bottom:15px;}
 	.main-section{ padding:70px 0;}
 	.c-logo-part ul li{ margin:0 1%; float:left; width:18%;}
@@ -33,14 +43,14 @@
 	.form{ margin:0;}
 	.contact-info-box{ margin:0 ;}
 	.social-link{ margin:0;}
-	
+
 	.main-nav{ display:block !important; }
 	.main-nav li a{ padding:8px 15px;}
 	/*.portfolioContainer{ width:750px; margin:0px auto !important; }
 	.Portfolio-box{ height:250px;}*/
-	
-	 
-	
+
+
+
 }
 
 @media only screen and (max-width: 767px) {
@@ -51,6 +61,9 @@
 	h6{ font-size:16px; margin-bottom:40px;}
 	p{ line-height:18px;}
 	.service-list{ font-size:12px; margin-bottom:20px;}
+  #technologies{text-align: left; padding-left: 2%}
+  #technologies-figure{ margin-left: 0; padding-left: 0; width: 100%}
+  #technologies-figure .logos{ width:12%; height: 12%; margin: 0;}
 	.we-create li{ font-size:13px; padding:0 0 0 8px}
 	.header h1{ font-size:28px;}
 	.header{ padding:60px 0;}
@@ -71,7 +84,7 @@
 	.business-talking h2{ font-size:36px;}
 	.contact-info-box{ margin:0 0 12px 30px; font-size:12px;}
 	.contact-info-box span{ line-height:18px;}
-	.social-link{ margin-left:30px;} 
+	.social-link{ margin-left:30px;}
 	.form{ margin:0 30px;}
 	.copyright{ font-size:12px;}
 	.business-talking a{ padding:10px 25px; font-size:14px;}
@@ -87,8 +100,14 @@
 	.isotope{ width:400px; margin:0px auto;}
 	.Portfolio-box{}
 	.portfolioContainer{ width:350px; margin:0px auto !important; } */
-	
-	
+
+
+}
+@media only screen and (max-width: 588px) {
+  #technologies{text-align: left; padding-left: 3%}
+  #technologies-figure{ margin-left: 0; padding-left: 0; width: 100%}
+  #technologies-figure .logos{ width:11%; height: 11%; padding: 1%}
+  .text-right{text-align: center;}
 }
 
 @media only screen and (max-width: 479px) {
@@ -96,10 +115,12 @@
 	.contact-info-box{ margin-left:0px;}
 	.header{ padding:40px;}
 	.social-link{ margin-left:0px;}
+  #technologies-figure{ margin-left: 0; padding-left: 0; width: 100%}
+  #technologies-figure .logos{ width:11%; height: 11%; }
 	.form{ margin:0}
 	.c-logo-part ul li{ display:block;}
 	.Portfolio-box{  max-width:300px !important; width:96.4% !important; margin:0 !important}
 	.Portfolio-box img { max-width:100%;}
-	.portfolioContainer{ width:280px !important; margin:0 auto !important } 
-	
+	.portfolioContainer{ width:280px !important; margin:0 auto !important }
+
 }
